# HomeWork

./: README.md  SoD_task1.cpp  SoD_task2.cpp  SoD_task3.cpp  SoD_task4.cpp  SoD_task5.cpp  lists_task1.cpp  lists_task2.cpp  lists_task6.cpp  lists_task7.cpp  main.cpp  тест
cpplab3/: 1.cpp  10.cpp  11.cpp  12.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
cpplab4/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp
lab2.0/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt  main.cpp
lab3/: main.py  task_1.py  task_2.py  task_3.py
lab5/: kill the killer.py  leaders.txt  main.py
lab6/: Dark Senokos.py  leaderbord.txt  main.py  pushka.py
Жадные алгоритмы/: CMakeLists.txt  LIS.cpp  NailsNRopes.cpp  VideoGame.cpp  WhitePawn.cpp  main.cpp
Интегрирование/: main.cpp
Массивы/: task1.cpp  task2.cpp
Рюкзак/: CMakeLists.txt  main.cpp
Структуры данных/: CMakeLists.txt
оле/: main.py
